--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "dev:serve": "cross-env NODE_ENV=development npx nodemon --exec babel-node --ext js,jsx --delay 0.5 --watch src --watch test src/server/",
     "prod:build": "npm run clean && npm run prod:copy-files && npm run prod:build-client && npm run prod:build-server ",
     "prod:build-client": "cross-env NODE_ENV=production parcel build ./src/client/index.js --public-url / --out-dir ./dist/bundles",
-    "prod:build-server": "cd src/ && npx babel './**/*.{js,jsx}' --no-babelrc --presets react,node8 --plugins transform-class-properties,syntax-dynamic-import --out-dir '../dist' --ignore test.js",
-    "prod:copy-files": "cd src/ && npx copyfiles './{static,static-root}/**/*' ../dist",
+    "prod:build-server": "cd src/ && npx babel '**/*.{js,jsx}' --no-babelrc --presets react,node8 --plugins transform-class-properties,syntax-dynamic-import --out-dir '../dist' --ignore test.js",
+    "prod:copy-files": "cd src/ && npx copyfiles '{static,static-root}/**/*' ../dist",
     "prod:serve": "cross-env NODE_ENV=production node dist/server/",
     "test": "npm run lint && npm run test:unit && npm run test:e2e",
     "test:quick": "npm run lint && npm run test:unit",
