--- a/package.json
+++ b/package.json
@@ -8,21 +8,21 @@
   },
   "scripts": {
     "start": "npm run dev",
-    "dev": "npm run dev:build & npm run dev:serve",
+    "dev": "npm-run-all --parallel dev:build dev:serve",
     "prod": "npm run prod:build && npm run prod:serve",
     "clean": "rimraf dist",
     "dev:build": "npm run clean && cross-env NODE_ENV=development parcel watch src/client/index.js --out-dir dist/bundles",
     "dev:serve": "cross-env NODE_ENV=development npx nodemon --exec babel-node --ext js,jsx --delay 0.5 --watch src --watch test src/server/",
     "prod:build": "npm run clean && npm run prod:copy-files && npm run prod:build-client && npm run prod:build-server ",
     "prod:build-client": "cross-env NODE_ENV=production parcel build src/client/index.js --public-url / --out-dir dist/bundles",
-    "prod:build-server": "cd src/ && npx babel '**/*.{js,jsx}' --no-babelrc --presets react,node8 --plugins transform-class-properties,syntax-dynamic-import --out-dir '../dist' --ignore test.js",
-    "prod:copy-files": "cd src/ && npx copyfiles '{static,static-root}/**/*' ../dist",
+    "prod:build-server": "cd src/ && cross-env npx babel '**/*.{js,jsx}' --no-babelrc --presets react,node8 --plugins transform-class-properties,syntax-dynamic-import --out-dir '../dist' --ignore test.js",
+    "prod:copy-files": "cross-env npx copyfiles -u 1 'src/static/**/*' dist",
     "prod:serve": "cross-env NODE_ENV=production node dist/server/",
     "test": "npm run lint && npm run test:unit && npm run test:e2e",
     "test:quick": "npm run lint && npm run test:unit",
     "lint": "npx eslint --ext jsx,js src test",
     "test:unit": "npx jest --config test/unit-test/jest.config.js",
-    "test:e2e": "npm run prod:build && NODE_ENV=test node-while -s dist/server/index.js -r 'npx cypress run'",
+    "test:e2e": "npm run prod:build && cross-env NODE_ENV=test node-while -s dist/server/index.js -r \"node node_modules/cypress/bin/cypress run\"",
     "test:watch": "npm-watch",
     "todo": "npx fixme -i 'node_modules/**' -i '.git/**' -i 'dist/**' --skip note"
   },
@@ -91,6 +91,7 @@
     "node-sass": "^4.7.2",
     "node-while": "^1.0.1",
     "nodemon": "^1.12.7",
+    "npm-run-all": "^4.1.2",
     "npm-watch": "^0.3.0",
     "parcel-bundler": "^1.1.0",
     "prop-types": "^15.6.0",
