upgraded parcel to latest - for detailed bundle breakdown

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "dev:build": "npm run clean && cross-env NODE_ENV=development parcel watch src/client/index.js --out-dir dist/bundles",
     "dev:build:css": "npm run clean && cross-env NODE_ENV=development parcel watch src/client/index.scss --out-dir dist/bundles",
     "dev:serve": "cross-env NODE_ENV=development npx nodemon --exec babel-node --ext js,jsx --delay 0.5 --watch src --watch test src/server/",
-    "prod:build": "npm run clean && npm run prod:copy-files && npm run prod:build-client && npm run prod:build-server ",
-    "prod:build-client": "cross-env NODE_ENV=production parcel build src/client/index.js --public-url / --out-dir dist/bundles",
+    "prod:build": "npm run clean && npm run prod:copy-files && npm run prod:build-server && npm run prod:build-client ",
+    "prod:build-client": "cross-env NODE_ENV=production parcel build src/client/index.js --public-url / --out-dir dist/bundles --detailed-report",
     "prod:build-server": "cd src/ && cross-env npx babel '**/*.{js,jsx}' --no-babelrc --presets react,node8 --plugins transform-class-properties,syntax-dynamic-import --out-dir '../dist' --ignore test.js",
     "prod:copy-files": "cross-env npx copyfiles -u 1 'src/static/**/*' dist",
     "prod:serve": "cross-env NODE_ENV=production node dist/server/",
@@ -105,7 +105,7 @@
     "nodemon": "^1.12.7",
     "npm-run-all": "^4.1.2",
     "npm-watch": "^0.3.0",
-    "parcel-bundler": "^1.1.0",
+    "parcel-bundler": "^1.6.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-async-component": "^1.0.2",
