--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "babel-preset-react": "^6.24.1",
     "cheerio": "^1.0.0-rc.2",
     "copyfiles": "^1.2.0",
+    "core-js": "^2.5.3",
     "cross-env": "^5.1.1",
     "cypress": "^1.4.0",
     "enzyme": "^3.2.0",
@@ -106,6 +107,7 @@
     "npm-run-all": "^4.1.2",
     "npm-watch": "^0.3.0",
     "parcel-bundler": "^1.6.2",
+    "parcel-plugin-bundle-visualiser": "^1.0.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-async-component": "^1.0.2",
@@ -117,6 +119,7 @@
     "react-router-test-context": "^0.1.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "regenerator-runtime": "^0.11.1",
     "rimraf": "^2.6.2",
     "storybook-router": "^0.3.2",
     "wait-on": "^2.1.0"
